objects/FSL__Work_Rule_Entry__c.object
<CustomObject>
    <fields>
        <fullName>External_ID__c</fullName>
        <description>This is used to consistently import data to a version of the SDO and translate data into other languages.</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FSL__Break_Duration__c</fullName>
        <inlineHelpText>The length of the break in minutes.</inlineHelpText>
        <label>Break Duration (minutes)</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__Earliest_Break_Start__c</fullName>
        <inlineHelpText>The number of minutes from the start of the service resource&apos;s availability to the earliest allowed break start time. For example, enter 120 to schedule a break at least two hours after the day starts.</inlineHelpText>
        <label>Earliest Break Start (minutes)</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__Latest_Break_End__c</fullName>
        <inlineHelpText>The number of minutes from the start of the service resource&apos;s availability to the latest allowed break end time. For example, enter 300 to schedule a lunch break to end no more than five hours after the day starts.</inlineHelpText>
        <label>Latest Break End (minutes)</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__Work_Rule__c</fullName>
        <label>Work Rule</label>
        <referenceTo>FSL__Work_Rule__c</referenceTo>
        <relationshipLabel>Work Rule Entries</relationshipLabel>
        <relationshipName>Work_Rule_Entry</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Work Rule Entry</label>
    <nameField>
        <displayFormat>WRE-{0000}</displayFormat>
        <label>Work Rule Entry Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Work Rule Entries</pluralLabel>
    <recordTypes>
        <fullName>FSL__Gap_Rule_Service</fullName>
        <active>true</active>
        <description>Limits service resources based on a number of items such as service appointments, appointment durations, or custom field values</description>
        <label>Field Service - Service Resource Availability</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>